--- a/app/ui/static/css/ui_components/forms.css
+++ b/app/ui/static/css/ui_components/forms.css
@@ -1,7 +1,6 @@
 textarea {
   width: 100%;
   min-height: 200px;
-  margin-bottom: 1.5rem;
   padding: 1rem;
   background-color: var(--bg-secondary);
   border: 1px solid #404040;
@@ -48,7 +47,7 @@ textarea:focus {
 }
 
 select {
-  /*width: 60%;*/
+  width: 100%;
   padding: 0.75rem;
   background-color: var(--bg-secondary);
   border: 1px solid #404040;
