WIP: struct redesign phase 5 ready for server testing

--- a/app/ui/templates/base.html
+++ b/app/ui/templates/base.html
@@ -41,8 +41,8 @@
   <div class="sidebar" id="sidebar">
     <nav>
         <a href="/">Home</a>
-        <a href="{{ url_for('page_workflows') }}">Workflows</a>
-        <a href="{{ url_for('files') }}">User data</a>
+        <a href="{{ url_for('ui.page_workflows') }}">Workflows</a>
+        <a href="{{ url_for('files.files') }}">User data</a>
     </nav>
   </div>
 
