--- a/app/ui/templates/files_file_detail.html
+++ b/app/ui/templates/files_file_detail.html
@@ -23,6 +23,6 @@
     <pre>{{ content }}</pre>
   </div>
   
-  <p><a href="{{ url_for('files') }}">Back to Files</a></p>
+  <p><a href="{{ url_for('files.files') }}">Back to Files</a></p>
 
 {% endblock %}
