--- a/app/ui/templates/files.html
+++ b/app/ui/templates/files.html
@@ -13,7 +13,7 @@
   <div class="file-list">
       {% if current_folder %}
       <div class="item folder">
-          <a href="{{ url_for('files', item_id=current_folder.parent) if current_folder.parent else url_for('files') }}">
+          <a href="{{ url_for('files.files', item_id=current_folder.parent) if current_folder.parent else url_for('files.files') }}">
               📁 ..
           </a>
       </div>
@@ -22,9 +22,9 @@
       {% for item in items %}
       <div class="item {{ item.type }}">
           {% if item.type == 'folder' %}
-          <a href="{{ url_for('files', item_id=item.id) }}">📁 {{ item.title }}</a>
+          <a href="{{ url_for('files.files', item_id=item.id) }}">📁 {{ item.title }}</a>
           {% else %}
-          <a href="{{ url_for('files_file_detail', item_id=item.id) }}">📄 {{ item.title }}</a>
+          <a href="{{ url_for('files.file_detail', item_id=item.id) }}">📄 {{ item.title }}</a>
           {% endif %}
       </div>
       {% endfor %}
