--- a/app/ui/templates/base.html
+++ b/app/ui/templates/base.html
@@ -41,7 +41,7 @@
   <div class="sidebar" id="sidebar">
     <nav>
         <a href="/">Home</a>
-        <a href="{{ url_for('ui.page_workflows') }}">Workflows</a>
+        <a href="{{ url_for('workflows.page_workflows') }}">Workflows</a>
         <a href="{{ url_for('files.files') }}">User data</a>
     </nav>
   </div>
