DONE; + change RX1 to RX

--- a/app/ui/templates/base.html
+++ b/app/ui/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %} - RX1</title>
+    <title>{% block title %}{% endblock %} - RX</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">    
 
     {% block head %}{% endblock %}
@@ -18,7 +18,7 @@
           <path d="M3 6h18M3 12h18M3 18h18"/>
         </svg>
       </div>
-      <div class="logo"><a href="/">RX1 (beta)</a></div>
+      <div class="logo"><a href="/">RX (beta)</a></div>
     </div>
     <div class="top-bar-center">
       <div class="search-placeholder">Search...</div>
